Colab を使用して作成されました

--- a/YAMAHAda.ipynb
+++ b/YAMAHAda.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBR2jE2dfFIDgJwBwtunSJ",
+      "authorship_tag": "ABX9TyPD7lwKAC41QOfLRXvRN4mv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/5dogs/data-science/blob/main/YAMAHAda.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "googleドライブにマウント"
+      ],
+      "metadata": {
+        "id": "jD84DJfvCYvn"
+      }
     },
     {
       "cell_type": "code",
